--- a/src/app/components/groups/groups.component.html
+++ b/src/app/components/groups/groups.component.html
@@ -26,7 +26,7 @@
         <div class="py-[10px] bg-table-header px-[15px] flex font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
             <span class="min-w-[355px]">Name</span>
             <span class="min-w-[102.324px]">Updates</span>
-            <span class="min-w-[120px]">Date saved</span>
+            <span class="min-w-[102.324px]">Date saved</span>
             <!-- <span class="min-w-[127.933px]">Surface</span> -->
             <span class="">Objects</span>
         </div>
@@ -35,9 +35,12 @@
             <div [ngClass]="activeIndex == index ? 'bg-[#232B32]':'bg-transparent'">
                 <div (click)="rowExpanded(index,group)" [ngClass]="activeIndex == index ? 'bg-[#232B32]':'bg-primaryBg'" class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border px-[15px] font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
                     <div class="min-w-[355px] flex gap-[15px]">
-                       
+                        <span (click)="$event.stopPropagation()">
+                            <mat-checkbox  (change)="onParentCheck(group,$event,index)">
+                            </mat-checkbox>
+                        </span>
                         <img [src]="activeIndex == index? 'assets/svg-icons/folder-icon-expanded.svg':'assets/svg-icons/folder-icon.svg'" alt="" />
-                        <span >{{group.name}}</span>
+                        <span class="flex items-center">{{group.name}}</span>
                     </div>
                     <div class="min-w-[102.324px] group relative">
                     <span class="min-w-[102.324px]">{{group.new_updates_count}}</span>
@@ -49,7 +52,17 @@
 
                     </div>
                 </div>
-                    <span class="min-w-[120px]">{{group.created_at | dateFormat}}</span>
+                    <!-- <span class="min-w-[120px]">{{group.created_at | dateFormat}}</span> -->
+                    <div class="min-w-[102.324px] group relative">
+                        <span class="min-w-[102.324px]">{{group.created_at | dateFormat}}</span>
+                        <div
+                            class="hidden absolute shadow-custom rounded-[10px] z-10 top-[20px] min-w-[200px] text-secondaryText group-hover:flex flex-col bg-primaryBg p-[10px] font-Barlow">
+                            <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
+                                <span>Updates since {{group.created_at | utcDateTimePipe}}</span>
+                            </div>
+    
+                        </div>
+                    </div>
                     <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
                         <div class="min-w-[102.324px] group relative">
                             <span class="min-w-[102.324px]">{{group.total_objects}}</span>
@@ -93,10 +106,16 @@
                 <div class="flex flex-col gap-[10px]">
                     <div (click)="getSitesDetail(site)" class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
                         <div class="min-w-[355px] items-center flex gap-[15px] pl-[5px]">
-                            <span (click)="$event.stopPropagation()">
-                                <mat-checkbox [checked]="isChecked(site)" (change)="toggleSelection(site, $event)">
-                                </mat-checkbox>
-                            </span>
+                            <div class="flex">
+                                <span (click)="$event.stopPropagation()">
+                                    <mat-checkbox [checked]="isChecked(site)" (change)="toggleSelection(site, $event)">
+                                    </mat-checkbox>
+                                </span>
+                                <div class="flex items-center">
+                                    <div class="w-[16px] h-[16px] ml-[5px] cursor-pointer" (click)="$event.stopPropagation();markerData(site)"><img
+                                            src="assets/svg-icons/marker-icon.svg" alt=""></div>
+                                </div>
+                            </div>
                             <img [ngClass]="{'point-site': site?.site_type == 'Point'}" class="h-[25px] w-[25px] object-cover" height="30" width="30" [src]="getSiteType(site?.site_type)" alt="" />
                             <span class="w-[225px]">{{site.name}}</span>
                         </div>
@@ -111,7 +130,17 @@
         
                             </div>
                         </div>
-                        <span class="min-w-[120px]">{{site.date | dateFormat}}</span>
+                        <!-- <span class="min-w-[120px]">{{site.date | dateFormat}}</span> -->
+                        <div class="min-w-[102.324px] group relative">
+                            <span class="min-w-[102.324px]">{{site.date | dateFormat}}</span>
+                            <div
+                                class="hidden absolute shadow-custom rounded-[10px] z-10 top-[20px] min-w-[200px] text-secondaryText group-hover:flex flex-col bg-primaryBg p-[10px] font-Barlow">
+                                <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
+                                    <span>Updates since {{group.created_at | utcDateTimePipe}}</span>
+                                </div>
+        
+                            </div>
+                        </div>
                         <!-- <span class="min-w-[127.933px] ">{{roundOff(site?.area)}}km²</span> -->
                         <div class="flex gap-[15px] min-w-[85px] justify-between items-center">
                             <!-- <span class="text-secondaryText">{{site?.count}}</span> -->
@@ -153,9 +182,9 @@
                         <div
                             class="flex w-full items-center gap-[15px] self-stretch ">
                             <div class="flex flex-col items-start gap-[15px] flex-0">
-                                <div class="flex min-w-[600px] w-full items-center gap-[30px] self-stretch">
+                                <div class="flex min-w-[600px] w-full items-center gap-[33px] self-stretch">
                                     <div
-                                        class="flex flex-col relative group justify-center items-start px-[8px]  flex-wrap
+                                        class="flex flex-col relative group justify-center items-center px-[8px]  flex-wrap
                                         min-w-[145px] py-[10px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
                                         <span class="text-secondary-heiglight group text-xs font-bold leading-[18px]">Frequency</span>
                                         <span class="text-secondaryText text-xs font-bold leading-normal">{{siteDetail?.frequency}}</span>
@@ -170,7 +199,7 @@
                                     </div>
                                     <div
                                         class="flex flex-col group  flex-wrap
-                                        relative justify-center items-start px-[8px] min-w-[145px] py-[10px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                                        relative justify-center items-center px-[8px] min-w-[145px] py-[10px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
                                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most Recent</span>
                                         <span class="text-secondaryText text-xs font-bold leading-normal">{{siteDetail?.most_recent_info?.acquisition_datetime |
                                             dateFormat}}</span>
@@ -190,7 +219,7 @@
                                     </div>
                                     <div
                                         class="flex flex-col group  flex-wrap
-                                        relative justify-center items-start px-[8px] min-w-[145px] py-[10px]  self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                                        relative justify-center items-center px-[8px] min-w-[145px] py-[10px]  self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
                                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Gap</span>
                                         <span
                                             class="text-secondaryText text-xs font-bold leading-normal">{{siteDetail?.gap.toFixed(3)}}</span>
@@ -204,7 +233,7 @@
                                             </div>
                                     </div>
                                     <div
-                                        class="flex flex-col group  flex-wrap relative justify-center items-start min-w-[145px] px-[8px] py-[10px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
+                                        class="flex flex-col group  flex-wrap relative justify-center items-center min-w-[145px] px-[8px] py-[10px] self-stretch gap-[5px] rounded-[5px] border border-solid border-custom-border bg-primaryBg">
                                         <span class="text-secondary-heiglight text-xs font-bold leading-[18px]">Most Recent Clear</span>
                                         <span class="text-yellow text-xs font-bold leading-normal" *ngIf="siteDetail?.most_recent_clear_info!==null">{{siteDetail?.most_recent_clear |
                                             dateFormat}}</span>
@@ -227,10 +256,7 @@
                                         
                                         </div>
                                     </div>
-                                    <div class="flex items-center">
-                                    <div class="w-[30px] h-[16px] ml-[5px] cursor-pointer" (click)="$event.stopPropagation();markerData(siteDetail)"><img
-                                            src="assets/svg-icons/marker-icon.svg" alt=""></div>
-                                    </div>
+                                    
                                    
                                 </div>
                             </div>
