--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-between items-center w-full">
+<div class="flex justify-between bg-primaryBg items-center w-full">
   <div class="w-[28.33%]"></div>
   <div class="w-fit flex h-[43px] bg-primaryBg rounded-[5px]">
     <div class="border-r border-custom-border px-[15px] w-[120px]">
