--- a/src/app/components/groups/groups.component.html
+++ b/src/app/components/groups/groups.component.html
@@ -24,16 +24,36 @@
     </div>
     <div class="flex flex-col overflow-x-auto h-screen">
         <div class="py-[10px] bg-table-header px-[15px] flex font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
-            <span class="min-w-[355px]">Name</span>
-            <span class="min-w-[102.324px]">Updates</span>
-            <span class="min-w-[102.324px]">Date saved</span>
+            <span class="min-w-[355px]">Name
+            </span>
+            <span class="min-w-[102.324px] group">Updates
+                <div class="group-hover:flex bg-secondaryBg absolute w-[200x] top-[80px] z-[1000000] shadow-custom-light text-sm p-[10px] rounded-sm hidden gap-[10px] font-Barlow">
+                    <span class="text-secondaryText">New Records after last seen</span>
+                </div>
+            </span>
+            <span class="min-w-[102.324px] group">Date saved
+                <div class="group-hover:flex bg-secondaryBg absolute w-[170px] top-[80px] z-[1000000] shadow-custom-light text-sm p-[10px] rounded-sm hidden gap-[10px] font-Barlow">
+                    <span class="text-secondaryText">Added Group on Date</span>
+                </div>
+            </span>
             <!-- <span class="min-w-[127.933px]">Surface</span> -->
-            <span class="">Objects</span>
+            <span class="group">Objects
+                <div class="group-hover:flex bg-secondaryBg absolute w-[180px]  top-[80px] z-[100000000] shadow-custom-light text-sm p-[10px] rounded-sm hidden gap-[10px] font-Barlow">
+                    <span class="text-secondaryText">Total number of footprints</span>
+                </div>
+            </span>
         </div>
         @for (group of groups; track group;let index = $index) {
           <ng-container>
             <div [ngClass]="activeIndex == index ? 'bg-[#232B32]':'bg-transparent'">
-                <div (click)="rowExpanded(index,group)" [ngClass]="activeIndex == index ? 'bg-[#232B32]':'bg-primaryBg'" class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border px-[15px] font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
+                <div [ngClass]="activeIndex == index ? 'bg-[#232B32]':'bg-primaryBg'" class="py-[3px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border px-[15px] font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
+                    <button mat-icon-button aria-label="expand row" (click)="rowExpanded(index,group); $event.stopPropagation();" >
+                        @if (activeIndex === index) {
+                          <mat-icon>keyboard_arrow_up</mat-icon>
+                        } @else {
+                          <mat-icon>keyboard_arrow_down</mat-icon>
+                        }
+                    </button>
                     <div class="min-w-[355px] flex gap-[15px]">
                         <span (click)="$event.stopPropagation()">
                             <mat-checkbox  (change)="onParentCheck(group,$event,index)">
@@ -104,9 +124,16 @@
         @if (nestedGroupsData?.sites?.length > 0){
             @for (site of nestedGroupsData?.sites;track site;let j = $index){
                 <div class="flex flex-col gap-[10px]">
-                    <div (click)="getSitesDetail(site)" class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
+                    <div class="py-[10px] items-center cursor-pointer flex border-y border-y-solid border-y-custom-border font-Barlow font-medium leading-[18px] text-secondaryText text-xs">
                         <div class="min-w-[355px] items-center flex gap-[15px] pl-[5px]">
-                            <div class="flex">
+                            <button mat-icon-button aria-label="expand row" (click)="getSitesDetail(site); $event.stopPropagation();" >
+                                @if (activeSite === site?.id) {
+                                  <mat-icon>keyboard_arrow_up</mat-icon>
+                                } @else {
+                                  <mat-icon>keyboard_arrow_down</mat-icon>
+                                }
+                            </button>
+                            <div class="flex" >
                                 <span (click)="$event.stopPropagation()">
                                     <mat-checkbox [checked]="isChecked(site)" (change)="toggleSelection(site, $event)">
                                     </mat-checkbox>
@@ -192,7 +219,7 @@
                                             class="hidden absolute shadow-custom left-[0px] z-50 rounded-[10px] top-[80px] w-max text-secondaryText group-hover:flex flex-col bg-secondaryBg p-[10px] font-Barlow">
                                             <div class="flex gap-[5px] text-sm font-semibold leading-[18px]">
                                                 <span>{{siteDetail?.frequency}}:</span>
-                                                <span>Number of distinct acquisitions on Most Recent Capture
+                                                <span>Total captures/ No of days
                                                 </span>
                                             </div>
                                         </div>
